tests/gcp/iap-ingress/overlays/application/test_data/expected/kubeflow_authentication.istio.io_v1alpha1_policy_ingress-jwt.yaml
apiVersion: authentication.istio.io/v1alpha1
kind: Policy
metadata:
  labels:
    app.kubernetes.io/component: iap-ingress
    app.kubernetes.io/instance: iap-ingress-v0.7.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: iap-ingress
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v0.7.0
    kustomize.component: iap-ingress
  name: ingress-jwt
  namespace: kubeflow
spec:
  origins:
  - jwt:
      audiences:
      - TO_BE_PATCHED
      issuer: https://cloud.google.com/iap
      jwksUri: https://www.gstatic.com/iap/verify/public_key-jwk
      jwtHeaders:
      - x-goog-iap-jwt-assertion
      trigger_rules:
      - excluded_paths:
        - exact: /healthz/ready
        - prefix: /.well-known/acme-challenge
  principalBinding: USE_ORIGIN
  targets:
  - name: istio-ingressgateway
    ports:
    - number: 80
