tests/gcp/iap-ingress/overlays/application/test_data/expected/kubeflow_~g_v1_configmap_parameters.yaml
apiVersion: v1
data:
  adminSaSecretName: admin-gcp-sa
  appName: kubeflow
  hostname: ""
  ingressName: envoy-ingress
  ipName: ""
  istioNamespace: istio-system
  namespace: kubeflow
  oauthSecretName: kubeflow-oauth
  project: ""
  tlsSecretName: envoy-ingress-tls
kind: ConfigMap
metadata:
  labels:
    app.kubernetes.io/component: iap-ingress
    app.kubernetes.io/instance: iap-ingress-v0.7.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: iap-ingress
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v0.7.0
    kustomize.component: iap-ingress
  name: parameters
  namespace: kubeflow
