tests/gcp/iap-ingress/overlays/application/test_data/expected/kubeflow_~g_v1_service_whoami-app.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: whoami
    app.kubernetes.io/component: iap-ingress
    app.kubernetes.io/instance: iap-ingress-v0.7.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: iap-ingress
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v0.7.0
    kustomize.component: iap-ingress
  name: whoami-app
  namespace: kubeflow
spec:
  ports:
  - port: 80
    targetPort: 8081
  selector:
    app: whoami
    app.kubernetes.io/component: iap-ingress
    app.kubernetes.io/instance: iap-ingress-v0.7.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: iap-ingress
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v0.7.0
    kustomize.component: iap-ingress
  type: ClusterIP
