tests/gcp/iap-ingress/overlays/application/test_data/expected/kubeflow_~g_v1_serviceaccount_kf-admin.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  labels:
    app.kubernetes.io/component: iap-ingress
    app.kubernetes.io/instance: iap-ingress-v0.7.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: iap-ingress
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v0.7.0
    kustomize.component: iap-ingress
  name: kf-admin
  namespace: kubeflow
